z-index issue

--- a/sass/variables/_general.scss
+++ b/sass/variables/_general.scss
@@ -143,7 +143,7 @@ body.active {
   background: none;
   border: none;
   outline: none;
-  z-index: 2;
+  z-index: 20;
   cursor: pointer;
   height: 53px;
   width: 60px;
